Fix errors due to rebase and downgrade to Java 8